// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList must match the diff snapshot between tagsSelected vs Default Props 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,13 +2,7 @@
    <TagListStyle />
    <TagListHeaderStyle>
      <span>
        consultation.tags.count
      </span>
-     <TagElementUnderlinedStyle
-       id="flush_tags_trigger"
-       onClick={[Function setReset]}
-     >
-       consultation.reset
-     </TagElementUnderlinedStyle>
    </TagListHeaderStyle>
  </TaglistWrapperStyle>
`;

exports[`TagList must match the snapshot with default Props 1`] = `
<TaglistWrapperStyle>
  <TagListStyle />
  <TagListHeaderStyle>
    <span>
      consultation.tags.count
    </span>
  </TagListHeaderStyle>
</TaglistWrapperStyle>
`;
